ubiquity (2.13.8) UNRELEASED; urgency=low

  * Honour base-installer/kernel/altmeta when deciding which kernels to
    install or keep installed.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 06 Dec 2012 17:19:09 +0000

ubiquity (2.13.7) raring; urgency=low

  * Use dh-autoreconf to avoid huge diffs when the autotools are updated.
  * Optimise all PNGs and tell pkgbinarymangler not to do so again, to save
    build time.
  * GTK frontend:
    - Fix regression causing incorrect response IDs to be returned from
      question dialogs (LP: #1085961).

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 05 Dec 2012 13:56:33 +0000

ubiquity (2.13.6) raring; urgency=low

  * Don't remove kernel headers just because we're removing signed kernel
    images of the same flavour (LP: #1070427).
  * Automatic update of included source packages: yaboot-installer
    1.1.25ubuntu2.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 29 Nov 2012 17:13:37 +0000

ubiquity (2.13.5) raring; urgency=low

  * Add basic support for compiz.
  * Automatic update of included source packages: hw-detect 1.91ubuntu1,
    partman-btrfs 10ubuntu1.

 -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Thu, 29 Nov 2012 09:37:42 +0000

ubiquity (2.13.4) raring; urgency=low

  [ Colin Watson ]
  * Huge pile of minor changes to make ubiquity compatible with pep8 1.3.

  [ Dmitrijs Ledkovs ]
  * Clear "Read release notes or update the installer" if neither action
    are possible. (LP: #1066302)
  * If there is only one disk & use_device recipe is used, change next step
    button to "Install Now". (LP: #1050044)
  * When auto-partitioning is not possible, allow to manually partition
    the same drive installation medium is on. (LP: #1053030)
  * Fix the question_dialog height-for-width (LP: #862270)
  * Fonconfig-voodoo is gone, not sure if some other "fontconfig"ury
    should be called instead. (LP: #1043031)
  * Fix partman test_windows_only: if resize option is available, use_disk