@@ -1,7 +1,13 @@
 ubiquity (2.13.8) UNRELEASED; urgency=low
 
+  [ Colin Watson ]
   * Honour base-installer/kernel/altmeta when deciding which kernels to
     install or keep installed.
+
+  [ Scott Kitterman ]
+  * Change encrypt home question to checkbox and indent it under the login
+    option to make it clear it is a sub question to the login option
+    (LP: #1066225)
 
  -- Colin Watson <cjwatson@ubuntu.com>  Thu, 06 Dec 2012 17:19:09 +0000
 
